@@ -156,10 +156,12 @@ static void set_backtrace_and_raise(VALUE exc, const char *file, int line)
         file = p + 1;
 #endif
     backtrace = rb_funcall(rb_cObject, oci8_id_caller, 0);
-    snprintf(errmsg, sizeof(errmsg), "%s:%d:in oci8lib.so", file, line);
-    errmsg[sizeof(errmsg) - 1] = '\0';
-    rb_ary_unshift(backtrace, rb_str_new2(errmsg));
-    rb_funcall(exc, oci8_id_set_backtrace, 1, backtrace);
+    if (TYPE(backtrace) == T_ARRAY) {
+        snprintf(errmsg, sizeof(errmsg), "%s:%d:in oci8lib.so", file, line);
+        errmsg[sizeof(errmsg) - 1] = '\0';
+        rb_ary_unshift(backtrace, rb_str_new2(errmsg));
+        rb_funcall(exc, oci8_id_set_backtrace, 1, backtrace);
+    }
     rb_exc_raise(exc);
 }
 
